# public-spending-analytics

./: .env.example  .gitignore  README.md  pyproject.toml  temp_duckdb_check.py
config/: project.toml
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/marts/: _marts.yml  dim_spending_stage.sql  fact_public_spending.sql  mart_recebimentos_by_beneficiary_month.sql
dbt/models/staging/: _staging.yml  stg_portal_transparencia__recebimentos_recursos_por_favorecido.sql  stg_portal_transparencia__spending_documents.sql
dbt/seeds/: spending_stage_seed.csv
dbt/tests/: assert_fact_public_spending_amounts_non_negative.sql  assert_int_recebimentos_monthly_reconciles_to_staging.sql  assert_int_recebimentos_monthly_record_counts_positive.sql  assert_mart_recebimentos_by_beneficiary_month_counts_valid.sql  assert_mart_recebimentos_by_beneficiary_month_grain_unique.sql  assert_mart_recebimentos_by_beneficiary_month_reconciles_to_intermediate.sql  assert_recebimentos_launch_month_consistency.sql  assert_recebimentos_source_file_row_number_unique.sql  assert_recebimentos_source_row_count.sql
docs/: architecture.md  metric_definitions.md  source_catalog.md
docs/assets/outputs/: public_spending_case_outputs.xlsx
src/gov_spending_analytics/: __init__.py
src/gov_spending_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gov_spending_analytics/cli/: main.py
src/gov_spending_analytics/ingestion/: __init__.py  (+2 more)
tests/: test_portal_transparencia_api.py  test_portal_transparencia_recebimentos.py  test_quality_checks.py
(+11 files in other folders)
