[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-spending-analytics"
version = "0.1.0"
description = "Local-first analytics foundation for Brazilian federal public spending data."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PhaifferTech" }
]
dependencies = [
  "duckdb>=1.2.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0"
]

[project.optional-dependencies]
dev = [
  "dbt-duckdb>=1.9.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
gov-spending = "gov_spending_analytics.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
